kubernetes/apps/comms/matrix/app/httproutes.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-synapse
  annotations:
    gatus.home-operations.com/endpoint: |-
      path: /.well-known/matrix/client
      conditions: ["[STATUS] == 200", "[BODY] == pat(*m.homeserver*)"]
spec:
  parentRefs:
    - {name: envoy-external, namespace: network}
  hostnames:
    - "matrix.mistelinn.org"
  rules:
    - backendRefs:
        - name: matrix-well-known
          namespace: comms
          port: 8010
      matches:
        - path:
            type: PathPrefix
            value: /.well-known/matrix
    - backendRefs:
        - name: matrix-matrix-authentication-service
          namespace: comms
          port: 8080
      matches:
        - path:
            type: RegularExpression
            value: "^/_matrix/client/[^/]+/(?:login|logout|refresh)"
    - backendRefs:
        - name: matrix-synapse
          namespace: comms
          port: 8008
      matches:
        - path:
            type: PathPrefix
            value: /_matrix
        - path:
            type: PathPrefix
            value: /_synapse

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-auth-service
  annotations:
    gatus.home-operations.com/endpoint: |-
      url: "https://mas.mistelinn.org/.well-known/openid-configuration"
      conditions: ["[STATUS] == 200", "[BODY].issuer == https://mas.mistelinn.org/"]
spec:
  parentRefs:
    - {name: envoy-external, namespace: network}
  hostnames:
    - "mas.mistelinn.org"
  rules:
    - backendRefs:
        - name: matrix-matrix-authentication-service
          namespace: comms
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-element
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 200", "len([BODY]) > 0"]
spec:
  parentRefs:
    - {name: envoy-external, namespace: network}
  hostnames:
    - "element.mistelinn.org"
  rules:
    - backendRefs:
        - name: matrix-element-web
          namespace: comms
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-rtc
  annotations:
    gatus.home-operations.com/endpoint: |-
      url: "https://rtc.mistelinn.org/sfu/get"
      conditions: ["[STATUS] == 405"]
spec:
  parentRefs:
    - {name: envoy-external, namespace: network}
  hostnames:
    - "rtc.mistelinn.org"
  rules:
    - backendRefs:
        - name: matrix-matrix-rtc-authorisation-service
          namespace: comms
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /sfu/get
        - path:
            type: PathPrefix
            value: /get_token
    - backendRefs:
        - name: matrix-matrix-rtc-sfu
          namespace: comms
          port: 7880
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-admin
spec:
  parentRefs:
    - {name: envoy-internal, namespace: network}
  hostnames:
    - "matrix-admin.mistelinn.org"
  rules:
    - backendRefs:
        - name: matrix-element-admin
          namespace: comms
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
